# kagura-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  images.yml  publish.yml
deploy/: compose.yml
deploy/images/: Dockerfile.agent  Dockerfile.base  Dockerfile.python
deploy/images/egress-proxy/: Dockerfile  README.md  proxy.py
docs/: README.md  bootstrap-eval.example.json  bootstrap-eval.md  design.md  extending.md  getting-started.md  legal.md  operations.md  project-status.md
src/kagura_agent/: __init__.py
src/kagura_agent/cli/: doctor.py  main.py  setup.py
src/kagura_agent/cockpit/: approval.py  core.py  hitl.py  intent.py  memory_write.py  registry.py
src/kagura_agent/cockpit/transports/: base.py  cli.py  discord.py  slack.py
src/kagura_agent/core/: session.py
src/kagura_agent/core/brain/: auth.py  base.py  claude.py  container.py  container_main.py  kagura_brain_engine.py  sdk_engine.py  select.py  startup.py
src/kagura_agent/eval/: __init__.py  actor_codex.py  bootstrap_ab.py  bootstrap_cli.py  bootstrap_live.py
src/kagura_agent/eval/fixtures/: bootstrap_snapshot.json  bootstrap_tasks.json
src/kagura_agent/mcp/: mcp_memory.py  memory_cloud.py  memory_sqlite.py  rest_bootstrap.py
src/kagura_agent/membrane/: brain_container.py  cloud_transports.py  cred_env.py  egress.py  egress_proxy.py  graduation.py  granted_broker.py  launcher.py  lease.py  providers.py  registry.py  registry_io.py  revoke.py  runtime.py  seccomp-agent.json  secret_source.py  verified_outcome.py
src/kagura_agent/patterns/: checkpoint.py  continuity.py  erasure.py  failure_learning.py  measure.py  reinforce.py
tests/: test_actor_codex.py  test_bootstrap_eval.py  test_bootstrap_eval_edges.py  test_brain.py  test_brain_container_deploy.py  test_brain_select.py  test_build_broker.py  test_checkpoint_persistence.py  test_cli.py  test_cockpit_approval.py  test_cockpit_bugfixes.py  test_cockpit_container.py  test_cockpit_control.py  test_cockpit_operator_identity.py  test_cockpit_v01.py  test_cockpit_v03.py  test_container_brain.py  test_continuity.py  test_cred_env.py  test_discord_transport.py  test_doctor.py  test_doctor_credentials.py  test_egress_proxy.py  test_erasure.py  test_failure_learning.py  test_graduation.py  test_granted_broker.py  test_images.py  test_kagura_brain_engine.py  test_launcher.py  test_lease.py  test_mcp_memory.py  test_measure.py  test_membrane.py  test_membrane_bugfixes.py  test_memory.py  test_memory_quarantine.py  test_memory_sqlite.py  test_memory_write_approval.py  test_providers.py  (+18 more)
