[project]
name = "kagura-agent"
version = "0.5.0"
description = "Memory-backed autonomous agent with a Docker membrane, a Slack/Discord cockpit, and capability graduation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Kagura AI" }]
dependencies = []

[project.optional-dependencies]
# Real brain (subscription-wrapped Claude Code CLI). Optional so the core +
# tests run without network or the SDK installed — the seam is a protocol.
claude = ["claude-agent-sdk>=0.1.0"]
# Cockpit transports — pure additions on top of the Transport protocol.
slack = ["slack-bolt>=1.18"]
discord = ["discord.py>=2.3"]
# Cloud cred provider transports (membrane/cloud_transports.py) — the deployment
# edge wiring the injected provider callables to real SDKs. Optional so the core
# + tests stay dependency-free.
aws = ["boto3>=1.34"]
gcp = ["google-auth>=2.0", "requests>=2.31"]
github = ["httpx>=0.27", "pyjwt[crypto]>=2.8"]
cloudflare = ["httpx>=0.27"]
# Host-side OS-keychain backend for *_keyring secret references
# (membrane/secret_source.py). Optional so the core + tests stay dependency-free;
# the real keychain call is the only line not unit-covered.
keyring = ["keyring>=24"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "anyio>=4", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
kagura-agent = "kagura_agent.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kagura_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["kagura_agent"]

# Optional cloud-transport SDKs (membrane/cloud_transports.py) are not installed
# in the type-check/test env — they are the deployment edge. Suppress their
# missing-import errors here rather than with env-fragile inline `# type: ignore`
# (which strict's warn_unused_ignores flips to an error wherever a dep happens to
# be present). The claude SDK stays on its own inline ignore by design.
[[tool.mypy.overrides]]
module = ["boto3", "google.*", "jwt", "httpx", "requests.*", "discord", "discord.*", "keyring"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/kagura_agent"]
branch = true
omit = [
    # The real Claude Agent SDK adapter — never imported in unit tests by design
    # (needs the SDK + a subscription); exercised only by the live smoke path.
    "src/kagura_agent/core/brain/sdk_engine.py",
    # NOTE: membrane/cloud_transports.py is intentionally NOT omitted — its
    # build_broker orchestration (#58) is pure and unit-tested. The SDK-backed
    # factory bodies in that file carry their own `# pragma: no cover`.
]

[tool.coverage.report]
show_missing = true
# Floor with margin below the current ~98%: a meaningful gate that won't flake on
# small fluctuations, and catches a new untested module landing.
fail_under = 95
# Deployment-wired edges (real docker/SDK/network) and type-only / protocol
# bodies are not unit-coverable; exclude them so the % reflects testable code.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "@(abc\\.)?abstractmethod",
]
